--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.7",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
