--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "angularx-social-login": "^2.1.1",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.2.0",
